--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>我的GitHub网站</title>
-  <style>
-    body { font-family: sans-serif; text-align: center; padding: 100px; background-color: #f0f8ff; }
-    h1 { color: #007acc; }
-  </style>
+  <title>chunmomo</title>
 </head>
 <body>
-  <h1>🎉 欢迎来到我的 GitHub Pages 网站！</h1>
-  <p>这是我发布的第一个网页，托管在 GitHub 上。</p>
+  <h1>chunmomo</h1>
+  <hr>
+  <h2>page_test</h2>
+  <p><a href="./image-page/index.html">查看图片页</a></p>
 </body>
 </html>
