--- a/image-page/index.html
+++ b/image-page/index.html
@@ -2,12 +2,12 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>chunmomo</title>
+  <title>图片展示</title>
 </head>
 <body>
-  <h1>chunmomo</h1>
-  <hr>
-  <h2>page_test</h2>
-  <p><a href="./image-page/index.html">查看图片页</a></p>
+  <h1>图片展示页面</h1>
+  <img src="my_image.png" alt="展示图片" style="max-width: 100%;">
+  <br>
+  <a href="../index.html">返回主页</a>
 </body>
 </html>
