--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <h1>chunmomo</h1>
   <hr>
   <h2>page_test</h2>
-  <p><a href="./image-page/index.html">查看图片页</a></p>
+  <p><a href="./HaneAme雨波_全集/menu.html">HaneAme雨波 目录大全</a></p>
 </body>
 </html>
